--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="css/screen.css">
   </head>
   <body>
+
+    <div id="books">
+     <form id="addBook" action="#">
+      <div>
+       <label for="coverImage">表紙画像：</label>
+       <input type="file" id="coverImage">
+       <label for="title">タイトル：</label>
+       <input type="text" id="title">
+       <label for="author">著者：</label>
+       <input type="text" id="author">
+       <label for="releaseDate">発売日：</label>
+       <input type="text" id="releaseDate">
+       <label for="keywords">キーワード：</label>
+       <input type="text" id="keywords">
+       <button id="add">追加</button>
+      </div>
+     </form>
+    </div>
+
     <script src="js/lib/jquery/dist/jquery.js"></script>
     <script src="js/lib/underscore/underscore.js"></script>
     <script src="js/lib/backbone/backbone.js"></script>
