--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,18 @@
        <button id="add">追加</button>
       </div>
      </form>
+
+     <div class="bookContainer">
+      <img src="img/placeholder.png" alt="">
+      <ul>
+       <li>タイトル</li>
+       <li>著者</li>
+       <li>発売日</li>
+       <li>キーワード</li>
+      </ul>
+
+      <button class="delete">削除</button>
+     </div>
     </div>
 
     <script type="text/template" id="bookTemplate">
