Renderring test, fix typo.

--- a/site/index.html
+++ b/site/index.html
@@ -37,12 +37,12 @@
     </div>
 
     <script type="text/template" id="bookTemplate">
-      <img src="<%= coverImage" alt="cover image">
+      <img src="<%= coverImage %>" alt="cover image">
       <ul>
         <li><%= title %></li>
-        <li><<%= author %></li>
-        <li><<%= releaseDate %></li>
-        <li><<%= ketwords %></li>
+        <li><%= author %></li>
+        <li><%= releaseDate %></li>
+        <li><%= keywords %></li>
       </ul>
       <button class="delete">削除</button>
     </script>
